Iniciando microserviço e controllers

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "Authentication": {
+    "TokenSecret": "SegredoAutenticaçãoTokenJwt12345",
+    "RefreshTokenSecret": "SegredoAutenticaçãoRefreshToken12345",
+  },
+  "DatabaseConnectionString": "Host=localhost;Database=pdiclients;Username=postgres;Password=root",
+  "Password": {
+    "StartSalt": "Teste",
+    "EndSalt": "Teste"
   }
 }
