--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7128;http://localhost:5020"
+      "applicationUrl": "https://localhost:7128;http://localhost:5020;https://0.0.0.0:7128"
     },
     "IIS Express": {
       "commandName": "IISExpress",
